# assistant-public

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  README_EN.md  config.yaml  conftest.py  pyproject.toml
config/: mypy_full.toml  ruff_full.toml  simple_cleanup_config.yaml
docker/: Dockerfile  docker-compose.production.yml  entrypoint.sh
docker/quote-service/: Dockerfile  app.py  docker-compose.yml  pytdx_client.py  quote_format.py  trading_hours.py
docker/tool-runtime/: Dockerfile  app.py  chart_builder.py  docker-compose.yml
docs/: README.md  changelog.md  config-yaml-reference.md  config-yaml-template.yaml  configuration.md  debugging.md  path-management.md  user_management_guide.md
docs/development/: cache-design.md  config-governance.md  health-data.md  integration_test_design_specification.md  memory-system-dual-retrieval.md  skills-integration.md  static-analysis.md  testing.md  tool-design-specification.md  unit_test_design_specification.md
scripts/: __init__.py  api_key_manager.py  cleanup_index_fields.py  config_doctor.py  conversation_test.py  dev_server.py  eval_index_arc.py  generate_docx_templates.py  import_health_auto_export.py  migrate_file_registry.py  migrate_pinned_memory_block.py  postprocess_health_data.py  prepare_public_release.py  rebuild_conversation_index.py  rebuild_vector_store.py  register_test_user.py  replay_health_extraction.py  replay_index_arc.py  replay_pinned_memory.py  run_test_suite.py  setup_worktree.py  simple_clean.py  static_analysis.py  test_doubao_params.py  test_doubao_quality.py  verify_chart_skill.py
scripts/conversation_test_lib/: __init__.py  analyzers.py  client.py  collectors.py  config.py  data.py  formatting.py  report.py
scripts/debug/: __init__.py  prompt_capture.py  tool_call_tracker.py
skills/chart_maker/: SKILL.md
skills/chart_maker/references/: markmap.md  mermaid.md  vega_lite.md
skills/xlsx/: SKILL.md
src/: __init__.py  _version.py  main.py
src/agent/: __init__.py  agent_health_checker.py  base_agent.py  factory.py  manager.py
src/agent/agents_implementations/: __init__.py  agent_registry.py  base_orchestrator_agent.py
src/agent/processors/: __init__.py  base_processor.py  inference_coordinator.py  local_memory_processor.py  processor_orchestrator.py  simple_memory_processor.py  system_prompt_assembler.py
src/api/: __init__.py  fastapi_app.py
src/api/error_handling/: __init__.py  handlers.py  middleware.py
src/api/middleware/: openclaw_filter.py
src/api/routes/: chat.py  files.py  health.py  usage.py
src/api/utils/: lightweight_health_checker.py
src/auth/: __init__.py  auth_manager.py  middleware.py  models.py  security.py  static_user_manager.py
src/config/: __init__.py  agent_config.py  api_config.py  app_config.py  auth_config.py  base_config.py  config_loader.py  core_config.py  credentials_registry.py  env_manager.py  inference_config.py  logging_config.py  openclaw_config.py  retry_config.py  runtime_env.py  smtp_config.py  storage_config.py  tool_catalog.py  tools_config.py
src/core/: __init__.py  context.py  email_client.py  http_pool.py  lifecycle.py  logger_setup.py  market_hours.py  notification.py  open_webui_format.py  openclaw_client.py  openclaw_filter.py  path_resolver.py  streaming.py  text_truncation.py  types.py
src/core/cache/: __init__.py  simple_cache.py
src/core/validation/: __init__.py  id_validator.py  security_decorators.py  unified_sanitizer.py
src/files/: __init__.py  desc_writer.py  hash_utils.py  models.py  paths.py  quota.py  repository.py  signed_url.py
src/inference/: __init__.py  image_generation.py  usage.py  video_generation.py
src/inference/content_analyzer/: __init__.py  index_arc_analyzer.py  pinned_memory_audit_analyzer.py  pinned_memory_rewriter.py  simple_analyzer.py  simple_memory_analyzer.py
src/inference/embeddings/: __init__.py  embeddings.py  factory.py  formats.py
src/inference/health_data_extraction/: __init__.py  unified_extractor.py
src/inference/image_description/: __init__.py  describer.py
src/inference/llm/: __init__.py  chat_ollama_enhanced.py  json_mode_config.py  llm_factory.py  model_loader.py  response_utils.py  retry_predicates.py
src/inference/shared/: __init__.py  provider_validation.py
src/session/: __init__.py  chat_helpers.py  openclaw_message_splitter.py  session_queue.py
src/storage/: __init__.py  langchain_vector_store.py
src/storage/dao/: __init__.py  async_conversation_dao.py  async_database_manager.py  async_file_registry_dao.py  async_health_dao.py  async_pinned_memory_block_dao.py  async_price_alert_dao.py  async_scheduled_message_dao.py  async_simple_pinned_memory_dao.py  async_todo_dao.py  async_usage_dao.py  async_user_channel_config_dao.py  async_user_requirement_dao.py  database_operations.py
src/storage/formatters/: __init__.py  conversation_formatter.py  pinned_memory_formatter.py  todo_formatter.py
src/storage/importers/: __init__.py  health_auto_export_importer.py
src/storage/models/: __init__.py  conversation.py  file_registry.py  todo.py  (+8 more)
src/tools/: __init__.py  tools_manager.py
src/utils/: __init__.py  async_utils.py  debug_config.py  emoji_mappings.py  message_formatting.py  text_formatter.py  time_formatter.py  token_utils.py
tests/: README.md  __init__.py  conftest.py  decorators.py
tests/e2e/: README.md  __init__.py  conftest.py  mock_llm.py  pytest.ini  test_agent_pipeline_e2e.py  test_api_smoke_e2e.py  test_memory_retrieval_tool_e2e.py  test_openclaw_pipeline_e2e.py  test_streaming_api.py  test_tool_runtime_container_e2e.py
tests/eval/: gemini_maps_grounding_eval.py  gemma_grounding_eval.py
tests/factories/: base_factory.py
tests/integration/: __init__.py  conftest.py  mock_llm_helper.py  test_agent_system_integration.py  test_api_system_integration.py  test_retrieval_two_stage_integration.py  test_round_number_allocation_integration.py  test_streaming_flow.py  test_tool_system_integration.py
tests/mocks/: __init__.py  service_mock_factory.py  unified_factory.py
tests/unit/: test_main.py
tests/utils/: test_id_generator.py
(+464 files in other folders)
